--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,11 @@
 	<div class="d1">
 		this is a new world!
 	</div>
+	<!-- 新功能添加 -->
+	<div id="d1">
+		<img src="logo.jpg" alt="公司logo">
+		<p>公司名称</p>
+		<p>公司简介</p>
+	</div>
 </body>
 </html>
