--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 <body>
 	<h1>Hello world</h1>
 	<div class="d1">
-		this is a newer world!
+		this is a newer world!<br>
+		and this is a beautiful weather!
 	</div>
 </body>
 </html>
